reactapp-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-dotnet-deployment
  labels:
    app: reactapp-dotnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp-dotnet
  template:
    metadata:
      labels:
        app: reactapp-dotnet
    spec:
      containers:
      - name: reactapp-dotnet
        image: kubraakesici/react-app-dotnet:1.5
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: reactapp-dotnet-service
spec:
  type: NodePort
  selector:
    app: reactapp-dotnet
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
