reactapp-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp-node-deployment
  labels:
    app: reactapp-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactapp-node
  template:
    metadata:
      labels:
        app: reactapp-node
    spec:
      containers:
      - name: reactapp-node
        image: kubraakesici/react-app-node:1.3
        ports:
        - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: reactapp-node-service
spec:
  type: NodePort
  selector:
    app: reactapp-node
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
      nodePort: 30201
